Fix spacing on small screens in tabs & requested fan speed
There was a margin in the tabs that is noticeable on smaller screens.
In addition, since the requested fan speed needed to span 2, it
messed with the columns in the grid. Using 1/-1 will allow it to
take up an entire row, regardless of the size.

--- a/web-app/src/app/tabs/battery/battery.component.css
+++ b/web-app/src/app/tabs/battery/battery.component.css
@@ -52,14 +52,17 @@
 	column-gap: 10px;
 	grid-template-columns: repeat(2, 1fr);
 }
-.grid-span-two {
-	grid-column: 1 / span 2;
+.grid-span-row {
+	grid-column: 1 / -1;
 }
 
 @media only screen
 and (max-width: 768px){
 	.battery-container-grid {
 		grid-template-columns: repeat(1, 1fr);
+	}
+	.grid-container {
+		grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
 	}
 }
 @media only screen
